<resources>
    <string name="app_name">Calculator</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Star">X</string>
    <string name="Div">/</string>
    <string name="Clear">C</string>
    <string name="Backspace">AC</string>
    <string name="equal">=</string>
    <string name="RP">(</string>
    <string name="LP">)</string>
    <string name="DOT">.</string>




</resources>