<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/SolutionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/Zero"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_margin="12dp"
        android:layout_above="@id/resultTv"
        />
    <TextView
        android:id="@+id/resultTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="75sp"
        android:text="@string/Zero"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_margin="12dp"
        android:layout_above="@id/button_layout"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/button_layout"
        android:layout_alignParentBottom="true"
        android:background="#FBCD43FF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Clear"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Clear"
                android:backgroundTint="#D8094F"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/RP"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/RP"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/LP"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/LP"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Div"
                android:textColor="#ffffffff"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="40sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Div"
                android:backgroundTint="#FF7733"
                android:layout_margin="15dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Seven"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/seven"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Eight"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Eight"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Nine"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Nine"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Star"
                android:backgroundTint="#FF5722"
                android:layout_margin="15dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/SIx"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Six"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Five"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Five"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Four"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Four"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Plus"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Plus"
                android:backgroundTint="#FF5722"
                android:layout_margin="15dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/One"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/One"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Two"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Two"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Three"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Three"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Minus"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="60sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Minus"
                android:backgroundTint="#FF5722"
                android:layout_margin="15dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/AC"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Backspace"
                android:backgroundTint="#E91E63"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Zero"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/Zero"
                android:backgroundTint="#DB7DEB"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/DOT"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="62sp"
                android:textAlignment="center"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/DOT"
                android:backgroundTint="#EB817D"
                android:layout_margin="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Equal"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="60sp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/equal"
                android:backgroundTint="#FF5722"
                android:layout_margin="15dp"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>